--- a/package.json
+++ b/package.json
@@ -10,10 +10,11 @@
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
     "axios": "^0.21.1",
-    "js-cookie": "^2.2.1",
-    "passport-jwt": "^4.0.0",
     "axios-hooks": "^2.3.0",
     "google-map-react": "^2.1.9",
+    "js-cookie": "^2.2.1",
+    "passport-jwt": "^4.0.0",
+    "query-string": "^7.0.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-helmet": "^6.1.0",
