--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "axios-hooks": "^2.3.0",
     "google-map-react": "^2.1.9",
     "js-cookie": "^2.2.1",
+    "moment": "^2.29.1",
     "passport-jwt": "^4.0.0",
     "query-string": "^7.0.0",
     "react": "^17.0.1",
@@ -20,6 +21,7 @@
     "react-helmet": "^6.1.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.2",
+    "react-trip-date": "^1.5.2",
     "web-vitals": "^1.0.1"
   },
   "scripts": {
